fixed balanced heights on cards issue with jquery fix and sorted some of the responsive spacing issues

--- a/src/styles/components/action-plan.styl
+++ b/src/styles/components/action-plan.styl
@@ -2,8 +2,10 @@
   font-size: $smallCopy;
   padding: $spacing*2;
   line-height: 1.6;
+  +above(m) {
+    padding: 0 $spacing*2;;
+  }
   +above(l) {
-    padding: 0;
     margin-top: $vspacing*16;
   }
   .u-btn {
