--- a/src/styles/components/headed-text.styl
+++ b/src/styles/components/headed-text.styl
@@ -11,4 +11,10 @@
   p {
     ff-body();
   }
+  .u-primary & {
+    // refactor this when you have time
+    +below(l) {
+      margin-bottom: 0;
+    }
+  }
 }
