--- a/src/styles/components/quick-links.styl
+++ b/src/styles/components/quick-links.styl
@@ -1,8 +1,10 @@
 &-quick-links {
-  padding-top: $vspacing*4.6;
   ul {
     li {
-      padding: $spacing 0;
+      padding-left: $hspacing*2;
+      +above(l) {
+        padding: $spacing 0;
+      }
     }
   }
 }
