--- a/src/styles/components/who-is-involved.styl
+++ b/src/styles/components/who-is-involved.styl
@@ -4,9 +4,18 @@
   +above(l) {
     text-align: left;
   }
+  .u-card & {
+    margin-bottom: 0;
+  }
   padding: $spacing;
   li {
     span(1/2, cycle: 2);
+    +above(m) {
+      span(1, uncycle: 2);
+    }
+    +above(l) {
+      span(1/2, cycle: 2);
+    }
     position: relative;
     height: $vspacing*4;
     background-size: contain;
