--- a/src/styles/utilities/card.styl
+++ b/src/styles/utilities/card.styl
@@ -9,9 +9,4 @@
     margin-right: 0;
     col(1/2, cycle:2);
   }
-  +above(l) {
-    // The following is a temporary fix which will be replaced with a js solution later on.
-    height: 600px;
-    min-height: 1150px;
-  }
 }
